test/failing/nestedlen.trunnel

struct nested {

  u8 tag;
  u8 len;
  union u[tag] with length len {
    3: u8 array[..-8];
  };

  u64 z;
}